<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<GridLayout
    android:paddingTop="10dp"

    android:id="@+id/g1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="5">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:id="@+id/l1"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/other">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="其他"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l2"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/bus">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="交通出行"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l3"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/eat">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="吃喝饮食"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l4"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/huafei">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="通讯费用"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l5"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/rent">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="房租水电"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l6"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/shop">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="消费购物"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l7"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/sport">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="运动健身"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l8"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/travel">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="旅游出行"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l9"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/jj">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="基金理财"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l10"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/hospital">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="医疗用品"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l11"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:src="@drawable/daily">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="日常用品"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
</GridLayout>
    <GridLayout
        android:paddingTop="10dp"
        android:id="@+id/g2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:id="@+id/ll1"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:src="@drawable/other">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="其他"
                android:gravity="center"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll2"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:src="@drawable/jj2">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="基金理财"
                android:gravity="center"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll3"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:src="@drawable/gz">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="工资兼职"
                android:gravity="center"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll4"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:src="@drawable/hb">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="礼金收入"
                android:gravity="center"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll5"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:src="@drawable/cp">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="意外收入"
                android:gravity="center"
                ></TextView>
        </LinearLayout>
    </GridLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <RadioButton
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="支出" />
        <RadioButton
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="收入" />
    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reason">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/number"
            android:hint="请输入金额">
        </EditText>

        <Button
            android:id="@+id/b1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="confirm"
            android:textColor="@color/white"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>

</LinearLayout>